[tool.poetry]
name = "nicevk"
version = "0.2.0"
description = ""
authors = ["nm17 <dannevergame@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vkbottle = "^2.7.2"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
nicevk = 'nicevk:cli.run'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

