[tool.poetry]
name = "nicevk"
version = "0.5.1"
description = ""
authors = ["nm17 <dannevergame@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vkbottle = {git = "https://github.com/timoniq/vkbottle.git"}
python-dotenv = "^0.13.0"
wget = "^3.2"
psutil = "^5.7.0"
python-rucaptcha = "^2.6.4"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.1"

[tool.poetry.scripts]
nicevk = 'nicevk:cli.run'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

